--- a/package.json
+++ b/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "google-gemini-ai",
-  "version": "2.0.0",
-  "description": "Google Gemini AI project",
+  "name": "reunify-backend",
+  "version": "1.0.0",
+  "description": "Backend server for Reunify AI image generation",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [
-    "google",
-    "gemini"
-  ],
-  "author": "Samson",
-  "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.14.0",
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mime-types": "^2.1.35",
-    "npm-check-updates": "^16.14.20"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
